# blog-actix

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2025-01-27-091858_create_users/: up.sql
migrations/2025-01-27-093322_index_username/: down.sql  up.sql
migrations/2025-01-30-135930_create_users/: down.sql  up.sql
migrations/2025-01-30-140714_create_posts/: up.sql
src/: lib.rs  main.rs  schema.rs
src/errors/: mod.rs
src/models/: posts.rs  users.rs
src/routes/: posts.rs  users.rs
