[package]
name = "blog-actix"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed <m.saad@storagestation.net>"]

[dependencies]
actix-web = "4.9.0"
diesel = { version = "2.2.6", features = ["sqlite", "r2d2", "postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
futures = "0.3.31"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.137"
